# OSC-Pedalboard

./: .gitignore  .gitmodules  README.md
.github/workflows/: static.yml
Code/: boot_out.txt  code.py  main.py  mpy_cross_all.py  osc_test.py  pedal_main.py  settings.json  settings.toml
Code/Midi/: CMakeLists.txt  lwipopts.h  main.c  main.cpp  main.h  pedal_settings.h  tusb_config.h  usb_descriptors.c
Code/Midi/PedalHw/: input.c  input.h  iohandler.cpp  iohandler.h  midi_handler.cpp  midi_handler.h  osc_handler.cpp  osc_handler.h
Code/Midi/Utils/: float_compare.cpp  float_compare.h
Code/PiPico/: pedal_main.py
Code/PiPico/compiled/: __version__.mpy  adafruit_pixelbuf.mpy  adafruit_st7735r.mpy  analogio.mpy  bitbangio.mpy  board.mpy  busio.mpy  digitalio.mpy  keypad.mpy  micropython.mpy  neopixel_pio.mpy  neopixel_write.mpy  onewireio.mpy  pulseio.mpy  pwmio.mpy  rainbowio.mpy  rotary.mpy  rotary_irq_rp2.mpy  usb_hid.mpy
Code/PiPico/compiled/adafruit_ads1x15/: __init__.mpy  ads1015.mpy  ads1115.mpy  ads1x15.mpy  analog_in.mpy
Code/PiPico/compiled/adafruit_bitmap_font/: __init__.mpy  bdf.mpy  bitmap_font.mpy  glyph_cache.mpy  pcf.mpy  ttf.mpy
Code/PiPico/compiled/adafruit_blinka/: __init__.mpy
Code/PiPico/compiled/adafruit_blinka/agnostic/: __init__.mpy  time.mpy
Code/PiPico/compiled/adafruit_blinka/board/: __init__.mpy
Code/PiPico/compiled/adafruit_blinka/board/raspberrypi/: __init__.mpy  pico.mpy  raspi_cm.mpy
Code/PiPico/compiled/adafruit_blinka/microcontroller/: __init__.mpy
Code/PiPico/compiled/adafruit_blinka/microcontroller/generic_micropython/: __init__.mpy  i2c.mpy  spi.mpy
Code/PiPico/compiled/adafruit_blinka/microcontroller/rp2040/: __init__.mpy  i2c.mpy  pin.mpy  spi.mpy  uart.mpy
Code/PiPico/compiled/adafruit_bus_device/: __init__.mpy  i2c_device.mpy  spi_device.mpy
Code/PiPico/compiled/adafruit_display_shapes/: __init__.mpy  circle.mpy  line.mpy  multisparkline.mpy  polygon.mpy  rect.mpy  roundrect.mpy  sparkline.mpy  triangle.mpy
Code/PiPico/compiled/adafruit_display_text/: __init__.mpy  bitmap_label.mpy  label.mpy  scrolling_label.mpy
Code/PiPico/compiled/adafruit_mcp3xxx/: __init__.mpy  analog_in.mpy  mcp3002.mpy  mcp3004.mpy  mcp3008.mpy  mcp3xxx.mpy
Code/PiPico/compiled/adafruit_platformdetect/: __init__.mpy  board.mpy  chip.mpy  revcodes.mpy
Code/PiPico/compiled/adafruit_platformdetect/constants/: __init__.mpy  boards.mpy  chips.mpy
Code/PiPico/compiled/microcontroller/: __init__.mpy  pin.mpy
Code/PiPico/compiled/uosc/: __init__.mpy  client.mpy  common.mpy  fakelogging.mpy  server.mpy  threadedclient.mpy
Code/WebSerialConfigurator/: index.html  index.js
Model/: BoxBottom v7.3mf  BoxTop v7.3mf  SmallBoxBottom.stl  SmallBoxTop.stl
Schematic/: #auto_saved_files#  Dependencies.md  PedalBoard.kicad_pro  PedalBoard.kicad_sch
Schematic/Libs/: ADS1115IDGST.kicad_sym  CNK_THB001P.kicad_mod  LED3535.kicad_mod  MODULE_SC0918.kicad_mod  SC0918.kicad_sym  SOP50P490X110-10N.kicad_mod  THB001P.kicad_sym  WS2812B-NARROW.kicad_mod  WS2812B.kicad_mod  WS2812B.kicad_sym
